# ColBERT

./: FACETING_STATUS.md  README.md  conftest.py  pyproject.toml  server.py
colbert/: searcher.py
colbert/data/: collection.py  ranking.py
scripts/: create_faceting_benchmark_data.py
tests/: test_collection.py  test_collection_metadata.py  test_faceting.py  test_faceting_basic.py  test_faceting_benchmark.py  test_faceting_benchmark_mock.py  test_faceting_data.py
tests/data/: .gitignore
